--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,7 +1,7 @@
 /* Resets the box size of every element */
 * {
     margin: 0;
-    padding: 50000px;
+    padding: 0;
     box-sizing: border-box;
   }
   
